--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -28,6 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: List files
+      run: dir
+
     - name: Run get_started script
       run: python get_started.py
 
