--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -29,7 +29,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: List files
-      run: dir
+      run: ls
 
     - name: Run get_started script
       run: python get_started.py
