chore: test demo in CICD

--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -36,6 +36,7 @@ jobs:
         pwd
         ls -lah
         echo $PYTHONPATH
+        ls -lah venv
         ls -lah venv/lib/site-packages/
 
     - name: Run get_started script
