--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  repository_dispatch:
+    types: [ trigger-harqis-demo-test ]
 
 jobs:
   run-demo-and-test:
@@ -14,9 +16,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker image without using cache
-      run: docker build --no-cache -t my-demo .
+      run: docker build --no-cache -t harqis-demo .
 
     - name: Run tests
-      run: docker run my-demo
+      run: docker run -v app_volume:/app/data harqis-demo
       env:
         ENV_ROOT_DIRECTORY: /app
