--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -1,4 +1,4 @@
-name: HARQIS-DEMO Test Flow
+name: HARQIS-DEMO Execute Setup Flow
 # Trigger the workflow on push or pull request to the main branch
 on:
   push:
@@ -12,13 +12,13 @@ jobs:
   run-demo-and-test:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Git repository
+    - name: Set Up Git Repository
       uses: actions/checkout@v2
 
     - name: Build Docker image without using cache
       run: docker build --no-cache -t harqis-demo .
 
-    - name: Run tests
-      run: docker run -m harqis-demo
+    - name: Run Tests
+      run: docker run harqis-demo
       env:
         ENV_ROOT_DIRECTORY: /app
