--- a/.github/workflows/run_demo.yml
+++ b/.github/workflows/run_demo.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set Up Git Repository
       uses: actions/checkout@v2
 
-    - name: Build Docker image without using cache
+    - name: Build Docker Image
       run: docker build --no-cache -t harqis-demo .
 
     - name: Run Tests
